src/test/ui/traits/trait-bounds-on-structs-and-enums-static.stderr
error[E0277]: the trait bound `usize: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums-static.rs:9:11
   |
LL | struct Foo<T:Trait> {
   |              ----- required by this bound in `Foo`
...
LL | static X: Foo<usize> = Foo {
   |           ^^^^^^^^^^ the trait `Trait` is not implemented for `usize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
